# schwab-mcp

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Containerfile  Dockerfile.admin  Dockerfile.mcp  Makefile  README.md  codemap.md  deploy.sh  pyproject.toml  pyrightconfig.json  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: agent.yaml  ci.yml  codeql.yml  container.yml
docs/: cloud-run-deployment.md  discord-setup.md
scripts/: lint  setup
sql/: 001_create_schwab_data.sql
src/: codemap.md
src/schwab_mcp/: __init__.py  auth.py  cli.py  codemap.md  context.py  preview_store.py  previews.py  resources.py  server.py  tokens.py
src/schwab_mcp/admin/: app.py
src/schwab_mcp/approvals/: __init__.py  base.py  codemap.md  discord.py
src/schwab_mcp/db/: __init__.py  _ingestion.py  _manager.py  _schema.py
src/schwab_mcp/remote/: app.py  config.py  oauth.py  token_storage.py
src/schwab_mcp/tools/: __init__.py  _protocols.py  _registration.py  account.py  codemap.md  history.py  options.py  order_helpers.py  orders.py  quotes.py  registry.py  stored_options.py  tools.py  transactions.py  utils.py
src/schwab_mcp/tools/technical/: __init__.py  base.py  codemap.md  momentum.py  moving_average.py  overlays.py  trend.py  volatility.py
tests/: conftest.py  test_account.py  test_admin_app.py  test_approval_wrapping.py  test_auth.py  test_build_order_spec.py  test_cli_auth.py  test_cli_credentials.py  test_cli_server_write_modes.py  test_conftest_fixtures.py  test_discord_approvals.py  test_history.py  test_ingestion.py  test_oauth_provider.py  test_options.py  test_orders.py  test_preview_store.py  test_preview_submit.py  test_previews.py  test_quotes.py  test_registry.py  test_resources.py  test_server.py  test_stored_options.py  test_technical_tools.py  test_token_storage.py  test_tokens.py  test_tools.py  test_transactions.py  test_utils.py
