[project]
name = "schwab-mcp"
version = "0.1.0"
description = "Schwab Model Context Protocol (MCP) for the Schwab API"
readme = "README.md"
authors = [
    { name = "Jason Kölker", email = "jason@koelker.net" }
]
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.11.0",
    "click>=8.3.0",
    "discord.py>=2.4.0",
    "httpx>=0.27.2",
    "mcp>=1.17.0",
    "platformdirs>=4.5.0",
    "pyyaml>=6.0.3",
    "schwab-py>=1.5.1",
]

[project.scripts]
schwab-mcp = "schwab_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mcp[cli]>=1.17.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "info",
    ".venv",
    "build",
    "dist",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
]
venvPath = "."
venv = ".venv"
reportMissingImports = false
typeCheckingMode = "basic"
